<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
  
    <name>Zols</name>
    <description>Open Source Content Management System</description>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.zols</groupId>
    <artifactId>zols</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    
    <scm>
        <connection>scm:git:git://github.com/sathishk/zols.git</connection>
        <developerConnection>scm:git:https://sathishk@github.com/sathishk/zols.git</developerConnection>
        <url>https://github.com/sathishk/zols</url>
    </scm>
    
    <properties>
        <java.version>11</java.version>
        <elasticsearch.version>7.9.1</elasticsearch.version>
        <junit.jupiter.version>5.5.2</junit.jupiter.version>
    </properties>  
    
    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.0</version>
    </parent>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <modules>
        <module>json-schema</module>
        <module>zols-datastore</module>
        <module>zols-datastore-test</module>
        <module>zols-datastore-elasticsearch</module>
        <module>zols-cms-plugin-service</module>
        <module>zols-cms-plugin</module>
        <module>zols-cms</module> 
        <!--        
        <module>zols-datastore-mongo</module>
        -->
    </modules>
    
<!--      <build>-->
<!--		<plugins>-->
<!--            <plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-checkstyle-plugin</artifactId>-->
<!--				<version>3.1.1</version>-->
<!--				<configuration>-->
<!--					<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>-->
<!--				</configuration>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>checkstyle</id>-->
<!--						<phase>validate</phase>-->
<!--						<goals>-->
<!--							<goal>check</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<failOnViolation>false</failOnViolation>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
<!--		</plugins>-->
<!--	</build>-->
</project>
